--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-12-13 23:11-0700\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2013-09-09 05:00+0200\n"
+"Last-Translator: SgtKabukiman\n"
+"Language-Team: German\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,23 +20,23 @@ msgstr ""
 
 #: settings.py:43
 msgid "German"
-msgstr ""
+msgstr "Deutsch"
 
 #: settings.py:44
 msgid "English"
-msgstr ""
+msgstr "Englisch"
 
 #: settings.py:45
 msgid "Japanese"
-msgstr ""
+msgstr "Japanisch"
 
 #: settings.py:46
 msgid "Dutch"
-msgstr ""
+msgstr "Niederländisch"
 
 #: settings.py:47
 msgid "Polish"
-msgstr ""
+msgstr "Polnisch"
 
 #: templates/base.html:23
 #, python-format
@@ -45,19 +45,19 @@ msgstr ""
 
 #: templates/base.html:23
 msgid "Python code by UraniumAnchor"
-msgstr ""
+msgstr "Python code von UraniumAnchor"
 
 #: templates/base.html:23
 msgid "Translated By"
-msgstr ""
+msgstr "Übersetzt von"
 
 #: templates/openid/login.html:17 templates/tracker/username.html:13
 msgid "Please correct errors below"
-msgstr ""
+msgstr "Bitte korrigiere die untenstehenden Fehler"
 
 #: templates/openid/login.html:29
 msgid "Sign In Using Your OpenID"
-msgstr ""
+msgstr "Melde dich mittels OpenID an"
 
 #: templates/openid/login.html:31
 msgid "OpenID"
@@ -65,7 +65,7 @@ msgstr ""
 
 #: templates/openid/login.html:35
 msgid "Sign in"
-msgstr ""
+msgstr "Anmelden"
 
 #: templates/tracker/baddatabase.html:4
 msgid "Database Does Not Exist"
@@ -77,15 +77,15 @@ msgstr ""
 
 #: templates/tracker/badobject.html:4
 msgid "Object Does Not Exist"
-msgstr ""
+msgstr "Objekt existiert nicht"
 
 #: templates/tracker/badobject.html:9
 msgid "Selected Object Does Not Exist In Database"
-msgstr ""
+msgstr "Das ausgewählte Object existiert nicht in der Datenbank"
 
 #: templates/tracker/challenge.html:5
 msgid "Challenge Detail"
-msgstr ""
+msgstr "Challenge Details"
 
 #: templates/tracker/challenge.html:10
 #: templates/tracker/challengeindex.html:24 templates/tracker/choice.html:10
@@ -93,7 +93,7 @@ msgstr ""
 #: templates/tracker/choiceoption.html:10 templates/tracker/donation.html:45
 #: templates/tracker/donation.html.py:82 templates/tracker/game.html:10
 msgid "Game"
-msgstr ""
+msgstr "Spiel"
 
 #: templates/tracker/challenge.html:14
 #: templates/tracker/challengeindex.html:27
@@ -107,7 +107,7 @@ msgstr ""
 #: templates/tracker/donationindex.html:15
 #: templates/tracker/donorindex.html:32
 msgid "Total"
-msgstr ""
+msgstr "Summe"
 
 #: templates/tracker/challenge.html:25 templates/tracker/choice.html:57
 #: templates/tracker/choiceoption.html:29 templates/tracker/donation.html:10
@@ -124,13 +124,13 @@ msgstr ""
 #: templates/tracker/donationindex.html:30 templates/tracker/donor.html:15
 #: templates/tracker/donorindex.html:25
 msgid "Email"
-msgstr ""
+msgstr "E-Mail"
 
 #: templates/tracker/challenge.html:32 templates/tracker/choice.html:65
 #: templates/tracker/choiceoption.html:37 templates/tracker/donation.html:14
 #: templates/tracker/donationindex.html:34 templates/tracker/donor.html:37
 msgid "Time Received"
-msgstr ""
+msgstr "Empfangen am"
 
 #: templates/tracker/challenge.html:35
 #: templates/tracker/challengeindex.html:33 templates/tracker/choice.html:29
@@ -141,16 +141,16 @@ msgstr ""
 #: templates/tracker/donationindex.html:37 templates/tracker/donor.html:40
 #: templates/tracker/game.html:31 templates/tracker/game.html.py:62
 msgid "Amount"
-msgstr ""
+msgstr "Betrag"
 
 #: templates/tracker/challenge.html:77
 msgid "Back to Challenge Index"
-msgstr ""
+msgstr "Zurück zur Challenge-Übersicht"
 
 #: templates/tracker/challengeindex.html:5
 #: templates/tracker/challengeindex.html:14
 msgid "Challenge Index"
-msgstr ""
+msgstr "Challenge-Übersicht"
 
 #: templates/tracker/challengeindex.html:10
 #: templates/tracker/choiceindex.html:10
@@ -158,21 +158,21 @@ msgstr ""
 #: templates/tracker/donorindex.html:11 templates/tracker/gameindex.html:10
 #: templates/tracker/index.html:16 templates/tracker/prizeindex.html:10
 msgid "Event"
-msgstr ""
+msgstr "Event"
 
 #: templates/tracker/challengeindex.html:30 templates/tracker/donation.html:51
 #: templates/tracker/game.html:28
 msgid "Goal"
-msgstr ""
+msgstr "Ziel"
 
 #: templates/tracker/choice.html:5
 msgid "Choice Detail"
-msgstr ""
+msgstr "Wahl Details"
 
 #: templates/tracker/choice.html:14 templates/tracker/choiceindex.html:27
 #: templates/tracker/choiceoption.html:14 templates/tracker/donation.html:85
 msgid "Choice"
-msgstr ""
+msgstr "Wahl"
 
 #: templates/tracker/choice.html:26 templates/tracker/choice.html.py:37
 #: templates/tracker/choiceindex.html:30
@@ -183,74 +183,74 @@ msgstr ""
 
 #: templates/tracker/choice.html:114 templates/tracker/choiceoption.html:84
 msgid "Back to Choice Index"
-msgstr ""
+msgstr "Zurück zur Wahl-Übersicht"
 
 #: templates/tracker/choiceindex.html:5 templates/tracker/choiceindex.html:14
 msgid "Choice Index"
-msgstr ""
+msgstr "Wahl-Übersicht"
 
 #: templates/tracker/choiceoption.html:5
 msgid "Choice Option Detail"
-msgstr ""
+msgstr "Optionsdetails"
 
 #: templates/tracker/commentslink.html:4
 msgid "Hide Comments"
-msgstr ""
+msgstr "Verstecke Kommentare"
 
 #: templates/tracker/commentslink.html:6
 msgid "Show Comments"
-msgstr ""
+msgstr "Zeige Kommentare"
 
 #: templates/tracker/donation.html:5
 msgid "Donation Detail"
-msgstr ""
+msgstr "Spendendetails"
 
 #: templates/tracker/donation.html:27 templates/tracker/donationindex.html:45
 #: templates/tracker/donor.html:43
 msgid "Comment"
-msgstr ""
+msgstr "Kommentar"
 
 #: templates/tracker/donation.html:40
 msgid "Challenge Bids"
-msgstr ""
+msgstr "Challenge Gebote"
 
 #: templates/tracker/donation.html:77
 msgid "Choice Bids"
-msgstr ""
+msgstr "Wahl Gebote"
 
 #: templates/tracker/donation.html:112
 msgid "Donation Source"
-msgstr ""
+msgstr "Spendenquelle"
 
 #: templates/tracker/donation.html:117
 msgid "Back to Donation Index"
-msgstr ""
+msgstr "Zurück zur Spenden-Übersicht"
 
 #: templates/tracker/donationindex.html:6
 #: templates/tracker/donationindex.html:15
 msgid "Donation Index"
-msgstr ""
+msgstr "Spenden-Übersicht"
 
 #: templates/tracker/donationindex.html:19 templates/tracker/donor.html:30
 #: templates/tracker/index.html:24
 msgid "Max/Avg Donation"
-msgstr ""
+msgstr "max/durchschn. Spende"
 
 #: templates/tracker/donationindex.html:41
 msgid "Source"
-msgstr ""
+msgstr "Quelle"
 
 #: templates/tracker/donationindex.html:67 templates/tracker/donor.html:55
 msgid "Yes"
-msgstr ""
+msgstr "Ja"
 
 #: templates/tracker/donationindex.html:67 templates/tracker/donor.html:55
 msgid "No"
-msgstr ""
+msgstr "Nein"
 
 #: templates/tracker/donor.html:5
 msgid "Donor Detail"
-msgstr ""
+msgstr "Spenderdetails"
 
 #: templates/tracker/donor.html:21 templates/tracker/donorindex.html:29
 msgid "Alias"
@@ -258,15 +258,15 @@ msgstr ""
 
 #: templates/tracker/donor.html:26
 msgid "Total Donations"
-msgstr ""
+msgstr "Gesamtspenden"
 
 #: templates/tracker/donor.html:84
 msgid "Back to Donor Index"
-msgstr ""
+msgstr "Zurück zur Spender-Übersicht"
 
 #: templates/tracker/donorindex.html:6 templates/tracker/donorindex.html:15
 msgid "Donor Index"
-msgstr ""
+msgstr "Spender-Übersicht"
 
 #: templates/tracker/donorindex.html:35
 msgid "Max"
@@ -274,170 +274,170 @@ msgstr ""
 
 #: templates/tracker/donorindex.html:35
 msgid "Avg"
-msgstr ""
+msgstr "Durchschn."
 
 #: templates/tracker/donorindex.html:35
 msgid "Donation"
-msgstr ""
+msgstr "Spende"
 
 #: templates/tracker/eventlist.html:4 templates/tracker/eventlist.html.py:9
 msgid "Event List"
-msgstr ""
+msgstr "Eventliste"
 
 #: templates/tracker/game.html:5
 msgid "Game Detail"
-msgstr ""
+msgstr "Spieldetails"
 
 #: templates/tracker/game.html:14 templates/tracker/gameindex.html:23
 #: templates/tracker/prizeindex.html:23
 msgid "Description"
-msgstr ""
+msgstr "Beschreibung"
 
 #: templates/tracker/game.html:20
 msgid "Challenges"
-msgstr ""
+msgstr "Challenges"
 
 #: templates/tracker/game.html:51
 msgid "Choices"
-msgstr ""
+msgstr "Wahlen"
 
 #: templates/tracker/game.html:84
 msgid "Back to Game Index"
-msgstr ""
+msgstr "Zurück zur Spiele-Übersicht"
 
 #: templates/tracker/gameindex.html:5 templates/tracker/gameindex.html:14
 msgid "Game Index"
-msgstr ""
+msgstr "Spiele-Übersicht"
 
 #: templates/tracker/index.html:6
 msgid "Index"
-msgstr ""
+msgstr "Übersicht"
 
 #: templates/tracker/index.html:20
 msgid "Donation Total"
-msgstr ""
+msgstr "Gesamt-Spendensumme"
 
 #: templates/tracker/index.html:29
 msgid "View Games"
-msgstr ""
+msgstr "Zeige Spiele"
 
 #: templates/tracker/index.html:30
 msgid "View Prizes"
-msgstr ""
+msgstr "Zeige Preise"
 
 #: templates/tracker/index.html:31
 msgid "View Challenges"
-msgstr ""
+msgstr "Zeige Challenges"
 
 #: templates/tracker/index.html:32
 msgid "View Choices"
-msgstr ""
+msgstr "Zeige Wahlen"
 
 #: templates/tracker/index.html:33
 msgid "View Donors"
-msgstr ""
+msgstr "Zeige Spender"
 
 #: templates/tracker/index.html:34
 msgid "View Donations"
-msgstr ""
+msgstr "Zeige Spenden"
 
 #: templates/tracker/index.html:36 templates/tracker/navfooter.html:6
 msgid "Back to Main Index"
-msgstr ""
+msgstr "Zurück zur Übersicht"
 
 #: templates/tracker/index.html:38
 msgid "Select another Event"
-msgstr ""
+msgstr "Wählen ein anderes Event"
 
 #: templates/tracker/index.html:48
 msgid "Welcome"
-msgstr ""
+msgstr "Willkommen"
 
 #: templates/tracker/index.html:48
 msgid "Logout"
-msgstr ""
+msgstr "Abmelden"
 
 #: templates/tracker/language.html:7
 msgid "Choose Language"
-msgstr ""
+msgstr "Wähle Sprache"
 
 #: templates/tracker/language.html:16
 msgid "Set"
-msgstr ""
+msgstr "Anwenden"
 
 #: templates/tracker/login.html:4
 msgid "Your username and password didn't match. Please try again."
-msgstr ""
+msgstr "Dein Nutzername oder Passwort stimmen nicht überein. Bitte versuche es erneut."
 
 #: templates/tracker/login.html:6
 msgid "Log In with a Google Account"
-msgstr ""
+msgstr "Melde dich mit einem Google Account an"
 
 #: templates/tracker/login.html:14
 msgid "Log In"
-msgstr ""
+msgstr "Anmelden"
 
 #: templates/tracker/navfooter.html:4
 #, python-format
 msgid "Back to %(dbname)s Index"
-msgstr ""
+msgstr "Zurück zur %(dbname)-Übersicht"
 
 #: templates/tracker/pagefooter.html:23
 msgid "Page"
-msgstr ""
+msgstr "Seite"
 
 #: templates/tracker/pagefooter.html:35
 msgid "of"
-msgstr ""
+msgstr "von"
 
 #: templates/tracker/pagefooter.html:38
 msgid "Go"
-msgstr ""
+msgstr "Go"
 
 #: templates/tracker/prizeindex.html:5 templates/tracker/prizeindex.html:14
 msgid "Prize Index"
-msgstr ""
+msgstr "Preis-Übersicht"
 
 #: templates/tracker/prizeindex.html:26
 msgid "Image"
-msgstr ""
+msgstr "Bild"
 
 #: templates/tracker/prizeindex.html:29
 msgid "Winner"
-msgstr ""
+msgstr "Gewinner"
 
 #: templates/tracker/prizeindex.html:41
 msgid "Link"
-msgstr ""
+msgstr "Link"
 
 #: templates/tracker/prizeindex.html:41
 msgid "None"
-msgstr ""
+msgstr "keines"
 
 #: templates/tracker/username.html:4
 msgid "Pick a Username"
-msgstr ""
+msgstr "Wähle einen Nutzernamen"
 
 #: templates/tracker/username.html:9
 msgid "Pick A Username For This Account"
-msgstr ""
+msgstr "Wähle einen Nutzernamen für dieses Konto"
 
 #: templates/tracker/username.html:27
 msgid "Username"
-msgstr ""
+msgstr "Nutzername"
 
 #: templates/tracker/username.html:29
 msgid "Submit"
-msgstr ""
+msgstr "Abschicken"
 
 #: tracker/forms.py:15
 msgid "Usernames can only contain letters, numbers, and the underscore"
-msgstr ""
+msgstr "Nutzernamen dürfen nur Buchstaben, Ziffern und den Unterstrich (_) enthalten"
 
 #: tracker/forms.py:17
 msgid "Username may not start with 'openiduser'"
-msgstr ""
+msgstr "Nutzernamen dürfen nicht mit 'openiduser' beginnen"
 
 #: tracker/forms.py:19
 msgid "Username already in use"
-msgstr ""
+msgstr "Dieser Nutzername ist bereits vergeben"
